--- a/Main.htm
+++ b/Main.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Love Story</title>
     <link rel="stylesheet" href="Main.css">
-    <link rel="shortcut icon" href="c:\Users\Youssef\Downloads\cute.png" type="image/png">
+    <link rel="shortcut icon" href="cute.png" type="image/png">
     <!-- Google Fonts for extra cuteness -->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
 </head>
